--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "lower-case-dashed-name-of-project",
-  "repository": "REPOSITORY-NAME-AS-IT-APPEARS-IN-GITHUB-URL",
+  "name": "cloth-simulation",
+  "repository": "cloth-simulation",
   "version": "0.1.0",
-  "title": "PROJECT TITLE HERE",
-  "description": "SHORT DESCRIPTION OF PROJECT HERE. ONE TO TWO SENTENCES MAX",
+  "title": "cloth simulation",
+  "description": "cloth simulation",
   "keywords": [
     "Princeton",
     "graphics",
     "three.js",
-    "COS 426",
-    "ivy league",
     "keyword1",
     "keyword2",
     "...",
